Basic Webserver works. Simple ON/OFF for another device on the CAN bus

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 default_envs = esp32doit-devkit-v1
-src_dir = src/jelly-alpha
+; src_dir = src/jelly-alpha
 
 [env]
 board = esp32doit-devkit-v1
