--- a/platformio.ini
+++ b/platformio.ini
@@ -12,14 +12,18 @@
 default_envs = esp32doit-devkit-v1
 ; src_dir = src/jelly-alpha
 
+
 [env]
 board = esp32doit-devkit-v1
-monitor_speed = 115200
+monitor_speCaed = 115200
 
 [env:esp32doit-devkit-v1]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+upload_speed = 921600
+; debug_tool = esp-builtin
+; ; debug_load_mode = manual
 lib_deps = 
     handmade0octopus/ESP32-TWAI-CAN@^1.0.1
     esphome/AsyncTCP-esphome@^2.1.4
